# quantflow-finance

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  getting-started.md  index.md  theory.md
docs/api/: data.md  index.md  options.md  risk.md
docs/guides/: market-data.md  options.md  risk-portfolio.md
examples/: basic_option_pricing.py  comprehensive_demo.py  portfolio_analysis.py
src/quantflow/: __init__.py
src/quantflow/data/: __init__.py  fetcher.py
src/quantflow/options/: __init__.py  base.py  binomial.py  black_scholes.py
src/quantflow/risk/: __init__.py  metrics.py  portfolio.py
tests/: conftest.py  test_binomial.py  test_black_scholes.py  test_market_data.py  test_portfolio.py  test_risk_metrics.py
