[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantflow-finance"
dynamic = ["version"]
description = "Professional quantitative finance library for options pricing, risk analytics, and portfolio management"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [{ name = "Jeevan B A", email = "jeevanba273@gmail.com" }]
keywords = [
    "quantitative finance",
    "options pricing",
    "risk management",
    "black-scholes",
    "portfolio analysis",
    "financial engineering",
    "derivatives",
    "VaR",
    "market data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "yfinance>=0.1.70",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/jeevanba273/quantflow-finance"
Documentation = "https://github.com/jeevanba273/quantflow-finance#readme"
Source = "https://github.com/jeevanba273/quantflow-finance"
"Bug Reports" = "https://github.com/jeevanba273/quantflow-finance/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "quantflow.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "network: tests that hit the live network (deselected in CI with -m 'not network')",
]

[tool.coverage.run]
branch = true
source = ["quantflow"]

[tool.black]
line-length = 88
target-version = ["py39"]
